apps/services/umami/umami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  selector:
    app: umami
  ports:
    - port: 3000
