apps/services/umami/umami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - analytics.recomend.app
      secretName: umami-tls
  rules:
    - host: analytics.recomend.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3000
